--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -6,30 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>Hello MemoWeb!</title>
+    <title>MemoWeb</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
-
   <body>
-    <div class="container">
-      <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-          </ul>
-        </nav>
-        <span class="logo"></span>
-      </header>
-
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-
-      <main role="main">
+    <section class="hero is-primary">
+      <div class="hero-head">
+        <header class="nav">
+          <div class="container">
+            <div class="nav-left">
+              <%= nav_link @conn, "MemoWeb", page_path(@conn, :index) %>
+            </div>
+            <nav class="nav-right">
+              <%= if logged_in?(@conn) do %>
+                <%= nav_link @conn, "Settings", user_path(@conn, :edit, current_user(@conn)) %>
+                <%= link "Logout", to: session_path(@conn, :delete), form: [class: "nav-item"], method: :delete %>
+              <% else %>
+                <%= nav_link @conn, "Register", user_path(@conn, :new) %>
+                <%= nav_link @conn, "Login", session_path(@conn, :new) %>
+              <% end %>
+            </div>
+          </nav>
+        </header>
+      </div>
+    </section>
+    <main class="section">
+      <div class="container">
+        <%= if get_flash(@conn, :info) do %>
+          <div class="notification is-info">
+            <%= get_flash(@conn, :info) %>
+          </div>
+        <% end %>
+        <%= if get_flash(@conn, :error) do %>
+          <div class="notification is-danger">
+            <%= get_flash(@conn, :error) %>
+          </div>
+        <% end %>
         <%= render @view_module, @view_template, assigns %>
-      </main>
-
-    </div> <!-- /container -->
+      </div>
+    </main>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
