--- a/web/templates/session/new.html.eex
+++ b/web/templates/session/new.html.eex
@@ -1,23 +1,13 @@
-<h2>Login</h2>
+<h2 class="title">Login</h2>
 
 <%= form_for @changeset, session_path(@conn, :create), fn f -> %>
   <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Your email or password were incorrect. Please try again.</p>
+    <div class="notification is-danger">
+      Your email or password were incorrect. Please try again.
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= label f, :email, class: "control-label" %>
-    <%= text_input f, :email, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= label f, :password, class: "control-label" %>
-    <%= password_input f, :password, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= submit "Login", class: "btn btn-primary" %>
-  </div>
+  <%= email_tag(f, :email) %>
+  <%= password_tag(f, :password) %>
+  <%= submit_tag "Login" %>
 <% end %>
