--- a/web/templates/user/edit.html.eex
+++ b/web/templates/user/edit.html.eex
@@ -1,6 +1,5 @@
-<h2>Edit user</h2>
+<%= link "Back", to: page_path(@conn, :index), class: "is-pulled-right" %>
+<h2 class="title">Update Settings</h2>
 
 <%= render "form.html", changeset: @changeset,
                         action: user_path(@conn, :update, @user) %>
-
-<%= link "Back", to: page_path(@conn, :index) %>
