--- a/web/templates/memo/form.html.eex
+++ b/web/templates/memo/form.html.eex
@@ -3,11 +3,11 @@
     <%= form_for @changeset, @action, fn f -> %>
       <%= error_header @changeset, "Oops, something went wrong! Please check the errors below." %>
 
-      <%= email_tag(f, :email) %>
-      <%= password_tag(f, :password) %>
-      <%= password_tag(f, :password_confirmation) %>
+      <%= text_tag f, :title %>
 
-      <%= submit_tag @submit_text %>
+      <%= textarea_tag f, :body %>
+
+      <%= submit_tag "Submit" %>
     <% end %>
   </div>
   <div class="column"></div>
