--- a/web/templates/session/new.html.eex
+++ b/web/templates/session/new.html.eex
@@ -1,13 +1,14 @@
 <h2 class="title">Login</h2>
 
-<%= form_for @changeset, session_path(@conn, :create), fn f -> %>
-  <%= if @changeset.action do %>
-    <div class="notification is-danger">
-      Your email or password were incorrect. Please try again.
-    </div>
-  <% end %>
+<div class="columns">
+  <div class="column">
+    <%= form_for @changeset, session_path(@conn, :create), fn f -> %>
+      <%= error_header @changeset, "Your email or password were incorrect. Please try again." %>
 
-  <%= email_tag(f, :email) %>
-  <%= password_tag(f, :password) %>
-  <%= submit_tag "Login" %>
-<% end %>
+      <%= email_tag f, :email %>
+      <%= password_tag f, :password %>
+      <%= submit_tag "Login" %>
+    <% end %>
+  </div>
+  <div class="column"></div>
+</div>
