--- a/web/templates/user/new.html.eex
+++ b/web/templates/user/new.html.eex
@@ -1,5 +1,3 @@
-<%= link "Back", to: page_path(@conn, :index), class: "is-pulled-right" %>
 <h2 class="title">Register</h2>
 
-<%= render "form.html", changeset: @changeset,
-                        action: user_path(@conn, :create) %>
+<%= render "form.html", changeset: @changeset, action: user_path(@conn, :create), submit_text: "Register" %>
