--- a/web/templates/user/edit.html.eex
+++ b/web/templates/user/edit.html.eex
@@ -1,3 +1,3 @@
 <h2 class="title">Update Settings</h2>
 
-<%= render "form.html", changeset: @changeset, action: user_path(@conn, :update, @user), submit_text: "Update" %>
+<%= render "form.html", changeset: @changeset, action: user_path(@conn, :update), submit_text: "Update" %>
