--- a/web/templates/memo/index.html.eex
+++ b/web/templates/memo/index.html.eex
@@ -4,7 +4,11 @@
       MemoWeb
     </h1>
     <h2 class="subtitle">
-      Write your memos on the web
+      <%= if assigns[:user] do %>
+        Posts by "<%= user_name(@user) %>"
+      <% else %>
+        Write your memos on the web
+      <% end %>
     </h2>
   </div>
 </section>
@@ -13,7 +17,7 @@
   <hr>
   <article>
     <h1 class="title"><%= link memo.title, to: memo_path(@conn, :show, memo) %></h1>
-    <p class="subtitle">by <%= user_name(memo) %></p>
+    <p class="subtitle">by <%= link user_name(memo), to: memo_path(@conn, :for_user, memo.user) %></p>
     <div class="content"><%= raw memo_body(memo) %></div>
   </article>
 <% end %>
