--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -41,12 +41,14 @@
     <main class="section">
       <div class="container">
         <%= if get_flash(@conn, :info) do %>
-          <div class="notification is-info">
+          <div class="notification is-success">
+            <button class="delete"></button>
             <%= get_flash(@conn, :info) %>
           </div>
         <% end %>
         <%= if get_flash(@conn, :error) do %>
           <div class="notification is-danger">
+            <button class="delete"></button>
             <%= get_flash(@conn, :error) %>
           </div>
         <% end %>
