--- a/web/templates/memo/index.html.eex
+++ b/web/templates/memo/index.html.eex
@@ -14,11 +14,16 @@
 </section>
 
 <%= for memo <- @memos do %>
-  <hr>
-  <article>
-    <h1 class="title"><%= link memo.title, to: memo_path(@conn, :show, memo) %></h1>
-    <p class="subtitle">by <%= link user_name(memo), to: memo_path(@conn, :for_user, memo.user) %></p>
-    <div class="content"><%= raw memo_body(memo) %></div>
+  <article class="message">
+    <header class="message-header">
+      <h1 class="title is-inline-block is-marginless"><%= link memo.title, to: memo_path(@conn, :show, memo) %></h1>
+      <p class="is-inline-block">by <%= link user_name(memo), to: memo_path(@conn, :for_user, memo.user) %></p>
+    </header>
+    <div class="message-body">
+      <div class="content">
+        <%= raw memo_body(memo) %>
+      </div>
+    </div>
   </article>
 <% end %>
 
