Further styling updates

--- a/web/static/css/_colors.scss
+++ b/web/static/css/_colors.scss
@@ -1,7 +1,12 @@
+// see http://clrs.cc/ for the origin of these colors
 $white: #ffffff;
+$orange: #ff851b;
 $blue: #0074D9;
+$purple: #b10dc9;
 $green: #2ecc40;
 $red: #ff4136;
-$primary: $blue;
-$danger: $red;
+$yellow: #ffdc00;
+
+$primary: $purple;
+
 $body-background: $white;
