--- a/web/templates/memo/index.html.eex
+++ b/web/templates/memo/index.html.eex
@@ -1,30 +1,18 @@
-<section class="hero">
-  <div class="hero-body">
-    <h1 class="title">
-      MemoWeb
-    </h1>
-    <h2 class="subtitle">
-      <%= if assigns[:user] do %>
-        Posts by "<%= user_name(@user) %>"
-      <% else %>
-        Write your memos on the web
-      <% end %>
-    </h2>
-  </div>
+<section class="has-padding-bottom">
+  <h1 class="title">
+    MemoWeb
+  </h1>
+  <h2 class="subtitle">
+    <%= if assigns[:user] do %>
+      Posts by "<%= user_name(@user) %>"
+    <% else %>
+      Write your memos on the web
+    <% end %>
+  </h2>
 </section>
 
 <%= for memo <- @memos do %>
-  <article class="message">
-    <header class="message-header">
-      <h1 class="title is-inline-block is-marginless"><%= link memo.title, to: memo_path(@conn, :show, memo) %></h1>
-      <p class="is-inline-block">by <%= link user_name(memo), to: memo_path(@conn, :for_user, memo.user) %></p>
-    </header>
-    <div class="message-body">
-      <div class="content">
-        <%= raw memo_body(memo) %>
-      </div>
-    </div>
-  </article>
+  <%= render "memo.html", memo: memo, conn: @conn %>
 <% end %>
 
 <%= paginate @conn, @kerosene %>
