--- a/web/templates/memo/new.html.eex
+++ b/web/templates/memo/new.html.eex
@@ -1,4 +1,3 @@
 <h2 class="title">New memo</h2>
 
-<%= render "form.html", changeset: @changeset,
-                        action: memo_path(@conn, :create) %>
+<%= render "form.html", changeset: @changeset, action: memo_path(@conn, :create), submit_text: "Create" %>
