--- a/web/templates/memo/show.html.eex
+++ b/web/templates/memo/show.html.eex
@@ -1,12 +1,1 @@
-<article>
-  <h1 class="title"><%= @memo.title %></h1>
-  <p class="subtitle">by <%= link user_name(@memo), to: memo_path(@conn, :for_user, @memo.user) %></p>
-  <div class="content"><%= raw memo_body(@memo) %></div>
-
-  <%= if logged_in?(@conn) && current_user(@conn).id == @memo.user_id do %>
-    <div class="block">
-      <%= link "Edit", to: memo_path(@conn, :edit, @memo), class: "button" %>
-      <%= link "Delete", to: memo_path(@conn, :delete, @memo), method: :delete, class: "button is-danger", data: [confirm: "Are you sure?"], form: [class: "is-inline-flex"] %>
-    </div>
-  <% end %>
-</article>
+<%= render "memo.html", memo: @memo, conn: @conn %>
