--- a/web/templates/memo/edit.html.eex
+++ b/web/templates/memo/edit.html.eex
@@ -1,3 +1,1 @@
-<h2 class="title">Edit memo</h2>
-
-<%= render "form.html", changeset: @changeset, action: memo_path(@conn, :update, @memo), submit_text: "Update" %>
+<%= render "form.html", changeset: @changeset, action: memo_path(@conn, :update, @memo), submit_text: "Update", title: "Edit memo" %>
