--- a/web/templates/user/form.html.eex
+++ b/web/templates/user/form.html.eex
@@ -1,11 +1,12 @@
 <div class="columns">
   <div class="column">
-    <%= form_for @changeset, @action, fn f -> %>
-      <%= email_tag(f, :email) %>
-      <%= password_tag(f, :password) %>
-      <%= password_tag(f, :password_confirmation) %>
-
-      <%= submit_tag @submit_text %>
+    <%= form_with_title @title do %>
+      <%= form_for @changeset, @action, fn f -> %>
+        <%= email_tag(f, :email) %>
+        <%= password_tag(f, :password) %>
+        <%= password_tag(f, :password_confirmation) %>
+        <%= submit_tag @submit_text %>
+      <% end %>
     <% end %>
   </div>
   <div class="column"></div>
