--- a/web/templates/memo/memo.html.eex
+++ b/web/templates/memo/memo.html.eex
@@ -1,7 +1,7 @@
 <article class="message">
   <header class="message-header">
     <h1 class="title is-inline-block is-marginless"><%= link @memo.title, to: memo_path(@conn, :show, @memo) %></h1>
-    <p class="is-inline-block">by <%= link user_name(@memo), to: memo_path(@conn, :for_user, @memo.user) %></p>
+    <p class="is-inline-block">by <%= link user_name(@memo), to: user_memo_path(@conn, :index, @memo.user) %></p>
   </header>
   <div class="message-body">
     <div class="content">
